--- a/app/src/css/custom.css
+++ b/app/src/css/custom.css
@@ -19,12 +19,12 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #F2F7A1;
+  --ifm-color-primary-dark: #F2F791;
+  --ifm-color-primary-darker: #F2F751;
+  --ifm-color-primary-darkest: #F2F711;
+  --ifm-color-primary-light: #6D67E4;
+  --ifm-color-primary-lighter: #6D87E4;
+  --ifm-color-primary-lightest: #6DA7E4;
+  --docusaurus-highlighted-code-line-bg: rgba(69, 60, 103, 0.3);
 }
